welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:12: error: not found: value occurences
	return occurences(nums,9)
               ^