welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
	var occurences = 0
	for(i <- 0 to nums.length - 1){
		if(nums(i) == lookingFor){
			occurences = occurences + 1
		}
	}
	return occurences
}

def arrayCount9(nums:Array[Int]): Int = {
	return occurences(nums,9)
}
